Dao层基本完成 后续： 设计接口->Controller层->Service层 中期答辩前完成后端

--- a/BudgetSystem/pom.xml
+++ b/BudgetSystem/pom.xml
@@ -48,6 +48,13 @@
         <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-spring-boot-starter</artifactId>
+            <!-- activiti7和mybatis版本冲突：禁用activiti里的mybatis-->
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mybatis</groupId>
+                    <artifactId>mybatis</artifactId>
+                </exclusion>
+            </exclusions>
             <version>7.1.99</version>
         </dependency>
 
