--- a/BudgetSystem/src/main/resources/application.yml
+++ b/BudgetSystem/src/main/resources/application.yml
@@ -14,6 +14,20 @@ spring:
     db-history-used: true
     history-level: full
     check-process-definitions: true
+  jpa:
+    database: MySQL
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    show-sql: true
+    hibernate:
+    # create：每次运行程序时，都会重新创建表，故而数据会丢失
+    # create-drop：每次运行程序时会先创建表结构，然后待程序结束时清空表
+    # update：每次运行程序，没有表时会创建表，如果对象发生改变会更新表结构，原有数据不会清空，只会更新（推荐使用）
+    # validate：运行程序会校验数据与数据库的字段类型是否相同，字段不同会报错
+    # none: 禁用DDL处理
+      ddl-auto: update
+    open-in-view: true
+
+
 
 mybatis-plus:
   global-config:
