--- a/BudgetSystem/pom.xml
+++ b/BudgetSystem/pom.xml
@@ -58,11 +58,16 @@
             <version>7.1.99</version>
         </dependency>
 
+
         <!-- 工具-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
     </dependencies>
