--- a/BudgetSystem/pom.xml
+++ b/BudgetSystem/pom.xml
@@ -74,6 +74,26 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.80</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>commons-fileupload</groupId>-->
+<!--            <artifactId>commons-fileupload</artifactId>-->
+<!--            <version>1.3.3</version>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>3.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml-schemas</artifactId>
+            <version>3.17</version>
+        </dependency>
 
     </dependencies>
 
@@ -95,6 +115,11 @@
     </build>
 
     <repositories>
+<!--        <repository>-->
+<!--            <id>aliyun-releases</id>-->
+<!--            <name>阿里云仓库</name>-->
+<!--            <url>https://maven.aliyun.com/repository/public</url>-->
+<!--        </repository>-->
         <repository>
             <id>alfresco</id>
             <name>Activiti Releases</name>
